# ros2_repo

./: README.md  x3_test.py  ydlidar_x3.rviz
install/: local_setup.sh  setup.sh
install/ydlidar_ros2_driver/lib/ydlidar_ros2_driver/: ydlidar_ros2_driver_client  ydlidar_ros2_driver_node
install/ydlidar_ros2_driver/share/ydlidar_ros2_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ydlidar_sdk/share/YDLIDAR_SDK/: FindYDLIDAR_SDK.cmake
log/: latest_build
src/ydlidar_x3_ros/: CMakeLists.txt  ydlidar_x3.rviz
src/ydlidar_x3_ros/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/ydlidar_x3_ros/install/ydlidar_x3_ros/lib/ydlidar_x3_ros/: ydlidar_x3_node
src/ydlidar_x3_ros/install/ydlidar_x3_ros/share/ament_index/resource_index/package_run_dependencies/: ydlidar_x3_ros
src/ydlidar_x3_ros/install/ydlidar_x3_ros/share/ament_index/resource_index/parent_prefix_path/: ydlidar_x3_ros
src/ydlidar_x3_ros/install/ydlidar_x3_ros/share/ydlidar_x3_ros/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml  package.zsh
src/ydlidar_x3_ros/install/ydlidar_x3_ros/share/ydlidar_x3_ros/cmake/: ydlidar_x3_rosConfig-version.cmake  ydlidar_x3_rosConfig.cmake
src/ydlidar_x3_ros/install/ydlidar_x3_ros/share/ydlidar_x3_ros/environment/: ament_prefix_path.dsv  path.dsv
src/ydlidar_x3_ros/launch/: lidar_with_rviz.launch.py
src/ydlidar_x3_ros/log/: latest_build
src/ydlidar_x3_ros/src/: ydlidar_x3_node.cpp  ydlidar_x3_node.cpp.save
(+43 files in other folders)
